# nashville-housing-platform

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
airflow/: docker-compose.yml
airflow/dags/: dag_utils.py  daily_ingestion_dag.py  redfin_dag.py  zillow_dag.py
dashboard/: app.py
docs/: .gitkeep  profiles.yml.template  snowflake_setup.sql
housing_pipeline/: dbt_project.yml  profiles.yml
housing_pipeline/macros/: generate_schema_name.sql
housing_pipeline/models/marts/: dim_geography.sql  fct_monthly_zip.sql  fct_opportunity_score.sql  schema.yml
housing_pipeline/models/staging/: schema.yml  sources.yml  stg_building_permits.sql  stg_census_county.sql  stg_census_zip.sql  (+4 more)
housing_pipeline/seeds/: nashville_valid_zips.csv  nashville_zip_regions.csv  tbi_agency_zip_coverage.csv
housing_pipeline/tests/: assert_census_county_unique_grain.sql  assert_census_zip_unique_grain.sql  assert_crime_index_unique_grain.sql  assert_crime_rate_nulls.sql  assert_market_activity_unique_grain.sql  assert_opportunity_score_range.sql  assert_permit_activity_unique_grain.sql  assert_poverty_rate_nulls.sql
ingestion/: config.py  loader.py  utils.py
ingestion/sources/: census.py  crime.py  fred.py  permits.py  property.py  redfin.py  zillow.py
scripts/: build_seed_files.py  fetch_nashville_geojson.py
tests/ingestion/: conftest.py  test_census.py  test_config.py  test_crime.py  test_fred.py  test_permits.py  test_property.py  test_redfin.py  test_utils.py  test_zillow.py
