[project]
name = "nashville-housing-platform"
version = "0.1.0"
description = "NSS Data Engineering Capstone — Nashville Housing Intelligence Platform"
requires-python = ">=3.12"

dependencies = [
    # HTTP client — stream() required for Redfin 1.5GB download
    "httpx>=0.27.0",
    # DataFrame engine
    "polars>=0.20.0",
    # Config / secrets management
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    # Retry logic for transient API failures
    "tenacity>=8.2.0",
    # Structured logging
    "loguru>=0.7.0",
    # Snowflake connector
    "snowflake-connector-python>=3.5.0",
    "dbt-snowflake>=1.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",       # httpx request mocking
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
